2005-12-13  Edward Hervey  <edward@fluendo.com>

	* gst/flx/gstflxdec.c: (gst_flxdec_chain): 
	If the speed of the file is null in the header, set the frame_time to the default
	setting of GST_SECOND / 70. Which is the default frame_delay for .fli files as
	stated in this document : http://www.compuphase.com/flic.htm
	Would be nice to have the time conversion done properly too
	(duration = flxh->frames * flxdec->frame_time)

2005-12-12  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* gst/videomixer/videomixer.c: (gst_videomixer_pad_sink_setcaps),
	(gst_videomixer_getcaps), (gst_videomixer_fill_queues),
	(gst_videomixer_update_queues), (gst_videomixer_collected): Adding
	documentation for videomixer on my way with a funny sample
	pipeline.

2005-12-12  Julien MOUTTE  <julien@moutte.net>

	* gst/videomixer/videomixer.c: (gst_videomixer_pad_sink_setcaps),
	(gst_videomixer_getcaps), (gst_videomixer_fill_queues),
	(gst_videomixer_update_queues), (gst_videomixer_collected):
	Fix caps negotiation. (#323896)

2005-12-12  Arwed v. Merkatz  <v.merkatz@gmx.net>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
	  Set correct timestamps on audio laces, fixes playback of mp3 from
		matroska.

2005-12-12  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/auparse/gstauparse.c: (gst_au_parse_base_init),
	(gst_au_parse_class_init), (gst_au_parse_init),
	(gst_au_parse_dispose), (gst_au_parse_chain),
	(gst_au_parse_change_state), (plugin_init):
	* gst/auparse/gstauparse.h:
	  Use gst_object_unref() for GstObjects instead of
	  g_object_unref() and fix a mem leak in a debug
	  statement; while we're at it, also borgify, use
	  boilerplate macros and clean up a little bit.

2005-12-11  Edward Hervey  <edward@fluendo.com>
